tests/baselines/reference/super_inside-object-literal-getters-and-setters.errors.txt
==== tests/cases/compiler/super_inside-object-literal-getters-and-setters.ts (3 errors) ====
    module ObjectLiteral {
        var ThisInObjectLiteral = {
            _foo: '1',
            get foo(): string {
                return super._foo;
                       ~~~~~
!!! super_inside-object-literal-getters-and-setters.ts(5,20): error TS2102: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
            },
            set foo(value: string) {
                super._foo = value;
                ~~~~~
!!! super_inside-object-literal-getters-and-setters.ts(8,13): error TS2102: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
            },
            test: function () {
                return super._foo;
                       ~~~~~
!!! super_inside-object-literal-getters-and-setters.ts(11,20): error TS2102: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
            }
        }
    }
    
    class F { public test(): string { return ""; } }
    class SuperObjectTest extends F {
        public testing() {
            var test = {
                get F() {
                    return super.test();
                }
            };
        }
    }
    
    